--- a/index.html
+++ b/index.html
@@ -14,6 +14,24 @@
 </head>
 
 <body>
+    <div id="rotate-overlay">
+        <div class="rotate-content">
+            <div class="rotate-icon">📺↩️</div>
+            <h2>ROTATE YOUR DEVICE!</h2>
+            <p>This website was designed for<br><b>DESKTOP COMPUTERS</b></p>
+            <p class="rotate-sub">Please turn your phone sideways<br>for the full retro experience!</p>
+            <div class="rotate-ascii">
+┌─────────────────┐<br>
+│&nbsp;&nbsp;&nbsp;╔══════════╗&nbsp;&nbsp;&nbsp;│<br>
+│&nbsp;&nbsp;&nbsp;║&nbsp;&nbsp;TURN&nbsp;&nbsp;&nbsp;║&nbsp;&nbsp;&nbsp;│<br>
+│&nbsp;&nbsp;&nbsp;║&nbsp;&nbsp;&nbsp;ME!&nbsp;&nbsp;&nbsp;║&nbsp;&nbsp;&nbsp;│<br>
+│&nbsp;&nbsp;&nbsp;╚══════════╝&nbsp;&nbsp;&nbsp;│<br>
+└─────────────────┘<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⟲
+            </div>
+            <p class="rotate-blink">*** LANDSCAPE MODE REQUIRED ***</p>
+        </div>
+    </div>
     <div class="container">
         <div class="lang-switcher">
             <button class="lang-btn"><span class="lang-flag">🇬🇧🇨🇦</span> English</button>
@@ -38,7 +56,7 @@
                 <a href="photography.html" data-i18n="nav_photo">Photography</a>
                 <a href="sculpting.html" data-i18n="nav_sculpting">Sculpting</a>
                 <a href="music.html" data-i18n="nav_music">Music</a>
-                <a href="projects.html" data-i18n="nav_projects">Projects</a>
+                <a href="projects.html" data-i18n="nav_projects">Code</a>
             </nav>
         </header>
 
