--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="js/render.js" defer></script>
     <script src="js/router.js" defer></script>
     <script src="js/media.js" defer></script>
+    <script src="js/sparkle.js" defer></script>
 </head>
 
 <body>
