--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
         // GitHub Pages SPA redirect:
         // Stores the requested path and redirects to index.html
         // The router picks up the path from sessionStorage and navigates to it
-        sessionStorage.setItem('spa-redirect', window.location.pathname);
+        sessionStorage.setItem('spa-redirect', window.location.pathname + window.location.search);
         window.location.replace('/');
     </script>
 </head>
