--- a/index.html
+++ b/index.html
@@ -69,25 +69,6 @@
 
         <div class="content">
             <aside class="sidebar">
-                <h3 data-i18n="sidebar_about_title">About Me</h3>
-                <p data-i18n="sidebar_about_text">Hello! I am Alex, an artist based in the city. I love capturing the
-                    essence of life in all its forms.
-                </p>
-                <h3 data-i18n="sidebar_links_title">Links</h3>
-                <ul class="social-links">
-                    <li><a href="https://github.com/mtldev514" target="_blank"><i class="fa fa-github"></i> <span
-                                data-i18n="sidebar_github">My GitHub</span></a></li>
-                    <li><a href="https://www.linkedin.com/in/alexcatus/?locale=fr_FR" target="_blank"><i
-                                class="fa fa-linkedin"></i> <span data-i18n="sidebar_linkedin">My LinkedIn</span></a>
-                    </li>
-                </ul>
-                <hr>
-                <h3 data-i18n="sidebar_status_title">Status</h3>
-                <p><span data-i18n="sidebar_status_available">Available for Commissions!</span></p>
-                <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNHJqNGp4ZzRnd3NqZzRnd3NqZzRnd3NqZzRnd3NqZzRnd3NqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1n/3o7TKMGpxP5OqPxF8Q/giphy.gif"
-                    alt="Under Construction" style="width: 100px;">
-                <p><small data-i18n="sidebar_construction">Site under construction!</small></p>
-                <hr>
                 <div class="radio-player">
                     <h3 data-i18n="sidebar_radio_title">Alex's Radio</h3>
                     <div class="radio-display">
@@ -110,16 +91,6 @@
                         </select>
                     </div>
                 </div>
-                <hr>
-                <div class="video-section">
-                    <h3 data-i18n="sidebar_video_title">Retro Tube</h3>
-                    <div class="video-frame">
-                        <video class="retro-video" loop muted>
-                            <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-                        </video>
-                        <div class="video-overlay" data-i18n="sidebar_video_note">Click to Play/Pause</div>
-                    </div>
-                </div>
             </aside>
 
             <main id="app">
@@ -128,6 +99,10 @@
         </div>
 
         <footer class="footer">
+            <div class="footer-social">
+                <a href="https://github.com/mtldev514" target="_blank" title="GitHub"><i class="fa fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/alexcatus/?locale=fr_FR" target="_blank" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
+            </div>
             <p data-i18n="footer_copy">&copy; 2026 Alex's Art. All rights reserved.</p>
             <p data-i18n="footer_browser">Best viewed in Netscape Navigator or Internet Explorer 6.0</p>
             <p><span data-i18n="footer_last_updated">Last Updated:</span> 10 Feb 2026</p>
